WordPress header styling: increase z-index of dropdowns to avoid a problem where they show up behind the header on support forums theme, add margin-left rule to prevent it being overridden with less specific rules and thus moving the menu out of position. props @crgeary on twitter for spotting the issue
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@5482 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/style/wp4.css
+++ b/wordpress.org/public_html/style/wp4.css
@@ -579,7 +579,8 @@ a img.aligncenter {
 		position:absolute;
 		top:46px;
 		left:0;
-		z-index:11;
+		z-index:101;
+		margin-left:0;
 		width:auto;
 	}
 
